--- a/.gitignore
+++ b/.gitignore
@@ -348,3 +348,9 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+ProNatur Biomarkt GmbH/bin/Debug/ProNatur Biomarkt GmbH.exe
+ProNatur Biomarkt GmbH/bin/Debug/ProNatur Biomarkt GmbH.pdb
+ProNatur Biomarkt GmbH/obj/Debug/ProNatur Biomarkt GmbH.csproj.FileListAbsolute.txt
+ProNatur Biomarkt GmbH/obj/Debug/ProNatur Biomarkt GmbH.csproj.GenerateResource.cache
+ProNatur Biomarkt GmbH/obj/Debug/ProNatur Biomarkt GmbH.exe
+ProNatur Biomarkt GmbH/obj/Debug/ProNatur Biomarkt GmbH.pdb
