--- a/ProNatur Biomarkt GmbH/ProNatur Biomarkt GmbH.csproj
+++ b/ProNatur Biomarkt GmbH/ProNatur Biomarkt GmbH.csproj
@@ -46,16 +46,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form_LoadingScreen.cs">
+    <Compile Include="Form_loadingScreen.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form_LoadingScreen.Designer.cs">
-      <DependentUpon>Form_LoadingScreen.cs</DependentUpon>
+    <Compile Include="Form_loadingScreen.Designer.cs">
+      <DependentUpon>Form_loadingScreen.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Form_main.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form_main.Designer.cs">
+      <DependentUpon>Form_main.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form_LoadingScreen.resx">
-      <DependentUpon>Form_LoadingScreen.cs</DependentUpon>
+    <EmbeddedResource Include="Form_loadingScreen.resx">
+      <DependentUpon>Form_loadingScreen.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form_main.resx">
+      <DependentUpon>Form_main.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
